add local A.I. moderation module